--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,7 +1,7 @@
 .home {
     min-height: 544px;
 }
-.masthead h1.ui.header {
+.masthead h1 {
       margin-top: 3em;
       margin-bottom: 0em;
       font-size: 4em;
@@ -12,18 +12,22 @@
     font-weight: lighter;
 }
 
-span.ui.header {
+span {
     font-weight: normal;
 }
 
 
 /* MEDIA QUERIES */
-
+@media only screen and (max-width: 1000px) {
+    .masthead h1 {
+        font-size: 2.5em;
+    }
+}
 @media only screen and (max-width: 700px) {
     .home {
         min-height: 275px;
     }
-    .masthead h1.ui.header {
+    .masthead h1 {
         font-size: 2em;
         margin-top: 3em;
     }
