--- a/src/components/css/nav.css
+++ b/src/components/css/nav.css
@@ -2,20 +2,16 @@
   margin-top: 33px;
 }
 
-.navBar button {
-  display: none;
-  margin-top: 21px;
+.navbar-collapse {
+  margin-top: 0px;
 }
 
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 575px) {
-    .navBar .nav,
-    .navBar .nav .nav-link {
-      display: none;
-    }
-    .navBar button {
-      display: block;
-    }
+@media only screen and (max-width: 767px) {
+
+  .navbar-collapse {
+    margin-top: 8px;
+  }
 
 }
